[package]
name = "rust-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "*"
tracing-subscriber = { version = "*", features = ["time", "local-time"] }
tracing-appender = "*"
tracing-error = "*"
color-eyre = "*"
# OPENSSL_INCLUDE_DIR=/usr/include/openssl-1.0 OPENSSL_LIB_DIR=/usr/lib/openssl-1.0
#tensorflow = { version = "*", features = [
#    "tensorflow_gpu",
#] }
#tch = "*"
